[gd_scene load_steps=26 format=2]

[ext_resource path="res://Sprites/peca quadrado jogo genius.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Game.gd" type="Script" id=2]
[ext_resource path="res://Sprites/fundo tela jogo play.jpg" type="Texture" id=3]
[ext_resource path="res://Sprites/peca circulo jogo genius.png" type="Texture" id=4]
[ext_resource path="res://Sprites/peca indicativa de formato e cor triangulo jogo genius.png" type="Texture" id=5]
[ext_resource path="res://Sprites/peca pentagono jogo genius.png" type="Texture" id=6]
[ext_resource path="res://Sprites/peca indicativa de formato e cor circulo jogo genius.png" type="Texture" id=7]
[ext_resource path="res://Sprites/peca indicativa de formato e cor pentagono jogo genius.png" type="Texture" id=8]
[ext_resource path="res://Sprites/peca indicativa de formato e cor quadrado jogo genius.png" type="Texture" id=9]
[ext_resource path="res://Sprites/peca triangulo jogo genius.png" type="Texture" id=10]
[ext_resource path="res://Sprites/logo jogo genius.png" type="Texture" id=11]
[ext_resource path="res://SFX/button_4.wav" type="AudioStream" id=12]
[ext_resource path="res://SFX/button_1.wav" type="AudioStream" id=13]
[ext_resource path="res://SFX/button_3.wav" type="AudioStream" id=14]
[ext_resource path="res://SFX/button_2.wav" type="AudioStream" id=15]
[ext_resource path="res://Sprites/botao sair.jpg" type="Texture" id=16]
[ext_resource path="res://SFX/menu_selection_1.wav" type="AudioStream" id=17]
[ext_resource path="res://SFX/gmae.wav" type="AudioStream" id=18]
[ext_resource path="res://SFX/483598_raclure_wrong (online-audio-converter.com).wav" type="AudioStream" id=19]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 5 ) ],
"loop": true,
"name": "3",
"speed": 5.0
}, {
"frames": [ ExtResource( 9 ) ],
"loop": true,
"name": "2",
"speed": 5.0
}, {
"frames": [ ExtResource( 8 ) ],
"loop": true,
"name": "4",
"speed": 5.0
}, {
"frames": [ ExtResource( 7 ) ],
"loop": true,
"name": "1",
"speed": 5.0
} ]

[sub_resource type="Animation" id=2]
resource_name = "button_1_animation"
length = 0.4
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("Button_1:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0.54, 0.54 ), Vector2( 0.58, 0.58 ), Vector2( 0.54, 0.54 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "button_2_animation"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Button_2:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0.54, 0.54 ), Vector2( 0.58, 0.58 ), Vector2( 0.54, 0.54 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "button_3_animation"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Button_3:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0.54, 0.54 ), Vector2( 0.58, 0.58 ), Vector2( 0.54, 0.54 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "button_4_animation"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Button_4:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0.54, 0.54 ), Vector2( 0.58, 0.58 ), Vector2( 0.54, 0.54 ) ]
}

[sub_resource type="Animation" id=6]
resource_name = "button_sair"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Button_Sair:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0.5, 0.5 ), Vector2( 0.55, 0.55 ), Vector2( 0.5, 0.5 ) ]
}

[node name="Game" type="Node2D"]
position = Vector2( 154.625, 82.217 )
script = ExtResource( 2 )
__meta__ = {
"_edit_horizontal_guides_": [ 750.964 ],
"_edit_vertical_guides_": [ 558.857 ]
}

[node name="Background" type="Sprite" parent="."]
position = Vector2( 143.758, 317.209 )
scale = Vector2( 1.05557, 1.05557 )
texture = ExtResource( 3 )

[node name="Button_1" type="Button" parent="."]
margin_left = -96.0
margin_top = 24.0
margin_right = 343.0
margin_bottom = 457.0
rect_scale = Vector2( 0.54, 0.54 )
disabled = true
icon = ExtResource( 4 )
flat = true
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button_2" type="Button" parent="."]
margin_left = 149.0
margin_top = 24.0
margin_right = 589.0
margin_bottom = 457.0
rect_scale = Vector2( 0.54, 0.54 )
disabled = true
icon = ExtResource( 1 )
flat = true
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button_3" type="Button" parent="."]
margin_left = -96.0
margin_top = 268.0
margin_right = 344.0
margin_bottom = 701.0
rect_scale = Vector2( 0.54, 0.54 )
disabled = true
icon = ExtResource( 10 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button_4" type="Button" parent="."]
margin_left = 149.0
margin_top = 268.0
margin_right = 588.0
margin_bottom = 701.0
rect_scale = Vector2( 0.54, 0.54 )
disabled = true
icon = ExtResource( 6 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button_Sair" type="Button" parent="."]
margin_left = 20.206
margin_top = 617.653
margin_right = 515.206
margin_bottom = 729.653
rect_scale = Vector2( 0.5, 0.5 )
icon = ExtResource( 16 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Bot_Color_1" type="AnimatedSprite" parent="."]
position = Vector2( 147, 269 )
scale = Vector2( 0.5, 0.5 )
frames = SubResource( 1 )
animation = "4"

[node name="Logo" type="Sprite" parent="."]
position = Vector2( 377.315, 657.218 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 11 )

[node name="Button_Animation" type="AnimationPlayer" parent="."]
anims/button_1_animation = SubResource( 2 )
anims/button_2_animation = SubResource( 3 )
anims/button_3_animation = SubResource( 4 )
anims/button_4_animation = SubResource( 5 )
anims/button_sair = SubResource( 6 )

[node name="Button_1_Sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 13 )

[node name="Button_2_Sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 15 )

[node name="Button_3_Sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 14 )

[node name="Button_4_Sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 12 )

[node name="Button_Sair_Audio" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 17 )

[node name="Sequencia_Errada" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 19 )
volume_db = 15.0

[node name="Sequencia_Certa" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 18 )
volume_db = 10.0
[connection signal="pressed" from="Button_Sair" to="." method="_on_Button_Sair_pressed"]
